kubernetes/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: apps
  labels:
    app.kubernetes.io/name: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich
  ports:
    - name: http
      port: 2283
      targetPort: http
      protocol: TCP
