kubernetes/apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: apps
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`photos.mcnees.me`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: immich
          port: 2283
  tls:
    secretName: legacy-public-wildcard-tls
